# TubeKeeper

./: .gitignore  prompt_implemenation_unit5.md  prompt_implementation_unit3.md  prompt_implementation_unit4.md
project/: plan.md  prompt_domain_design_unit3.md  (+8 more)
project/aidlc-docs/construction/unit1_authentication/: API_SPECIFICATION.md  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_REPORT.md  README.md  TROUBLESHOOTING.md  create_tables_fixed.sql  deploy-production-ready.sh  domain_model.md  get_verification_code.py  implementation_plan_unit1_authentication.md  logical_design.md  main.py  plan_unit1_authentication.md  pyproject.toml  requirements.txt  sequence_diagrams.md  test_api.py
project/aidlc-docs/construction/unit1_authentication/src/application/dtos/: authentication_dtos.py  profile_dtos.py
project/aidlc-docs/construction/unit1_authentication/src/application/interfaces/: email_service_interface.py
project/aidlc-docs/construction/unit1_authentication/src/application/services/: authentication_app_service.py  profile_app_service.py
project/aidlc-docs/construction/unit1_authentication/src/common/: jwt_utils.py  utils.py
project/aidlc-docs/construction/unit1_authentication/src/domain/aggregates/: session_aggregate.py  user_aggregate.py  verification_code_aggregate.py
project/aidlc-docs/construction/unit1_authentication/src/domain/entities/: profile.py  session.py  user.py  verification_code.py
project/aidlc-docs/construction/unit1_authentication/src/domain/events/: base_event.py  session_events.py  user_events.py  verification_events.py
(+311 files in other folders)
